# vtzero

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  appveyor.yml  build-appveyor.bat  build-msys2.bat
.github/actions/cmake/: action.yml
.github/actions/cmake-windows/: action.yml
.github/actions/install-macos/: action.yml
.github/actions/install-protozero/: action.yml
.github/actions/install-windows/: action.yml
.github/workflows/: ci.yml  clang-tidy.yml
bench/: run.cpp
doc/: CMakeLists.txt  Doxyfile.in  advanced.md  doc.md  reading.md  tutorial.md  writing.md
examples/: CMakeLists.txt  utils.cpp  utils.hpp  vtzero-check.cpp  vtzero-create.cpp  vtzero-encode-geom.cpp  vtzero-filter.cpp  vtzero-show.cpp  vtzero-stats.cpp  vtzero-streets.cpp
include/vtzero/: attributes.hpp  builder.hpp  builder_helper.hpp  builder_impl.hpp  elevation_layer.hpp  encoded_property_value.hpp  exception.hpp  feature.hpp  feature_builder_impl.hpp  geometry.hpp  geometry_basics.hpp  index.hpp  layer.hpp  layer_builder.hpp  layer_table.hpp  mesh_layer.hpp  mvt_mesh.hpp  output.hpp  point.hpp  property.hpp  property_value.hpp  property_value_view.hpp  property_view.hpp  reader.hpp  scaling.hpp  tag_value.hpp  tile.hpp  tile_builder.hpp  types.hpp  unaligned_table.hpp  util.hpp  value_view.hpp  vector_tile.hpp  version.hpp
include/vtzero/detail/: attributes.hpp  builder_impl.hpp  feature_builder_impl.hpp  geometry.hpp  util.hpp
test/: CMakeLists.txt  base_tests.cpp  fixture_tests.cpp  formatting_tests.cpp  generate-formatting-tests.cpp  test.cpp  test_main.cpp  tests.cpp
test/data/: ext1.mvt
test/data/formatting-tests/: feature_with_multiple_attributes.mvt  feature_with_multiple_elevations.mvt  feature_with_multiple_geometric_attributes.mvt  feature_with_multiple_geometries.mvt  feature_with_multiple_ids_int_int.mvt  feature_with_multiple_ids_int_string.mvt  feature_with_multiple_ids_string_string.mvt  feature_with_multiple_spline_knots.mvt  feature_with_multiple_tags.mvt  feature_with_spline_degree_0.mvt  feature_with_spline_degree_1.mvt  feature_with_spline_degree_4.mvt  feature_with_tags_and_attributes.mvt  feature_with_unknown_field.mvt  feature_with_unknown_geometry_type.mvt  feature_with_version_2_attributes_field.mvt  feature_with_version_2_elevations_field.mvt  feature_with_version_2_geom_attributes_field.mvt  feature_with_version_2_string_id_field.mvt  feature_without_geometry.mvt  layer_with_attribute_scaling_with_unknown_field.mvt  layer_with_attribute_scaling_with_wrong_base_type.mvt  layer_with_attribute_scaling_with_wrong_multiplier_type.mvt  layer_with_attribute_scaling_with_wrong_offset_type.mvt  layer_with_empty_name.mvt  layer_with_invalid_protobuf_type.mvt  layer_with_tile_x_too_large.mvt  layer_with_tile_y_too_large.mvt  layer_with_two_double_tables.mvt  layer_with_two_float_tables.mvt  layer_with_two_int_tables.mvt  layer_with_unknown_field.mvt  layer_with_version_0.mvt  layer_with_version_2_attribute_scaling.mvt  layer_with_version_2_double_table.mvt  layer_with_version_2_elevation_scaling.mvt  layer_with_version_2_float_table.mvt  layer_with_version_2_int_table.mvt  layer_with_version_2_string_table.mvt  layer_with_version_4.mvt  (+19 more)
test/data/vector-tile-base/: README.md
test/data/vector-tile-base/invalid/: single_layer_v3_polygon_3d.mvt
test/data/vector-tile-base/valid/: all_attribute_types_v3.mvt  single_layer_v2_linestring.mvt  single_layer_v2_points.mvt  single_layer_v2_polygon.mvt  single_layer_v3_linestring_3d.mvt  single_layer_v3_points_3d.mvt  single_layer_v3_spline.mvt  single_layer_v3_spline_3d.mvt
test/fuzz/: CMakeLists.txt  skip_structured_value.cpp
test/include/: test.hpp  test_attr.hpp  test_geometry.hpp  test_geometry_handler.hpp  test_point.hpp
test/t/: test_attributes.cpp  test_attributes_variant.cpp  test_builder.cpp  test_builder_linestring.cpp  test_builder_point.cpp  test_builder_polygon.cpp  test_builder_spline.cpp  test_exceptions.cpp  test_extended_geometry.cpp  test_extended_geometry_point.cpp  test_feature.cpp  test_geometric_attributes.cpp  test_geometry.cpp  test_geometry_curve.cpp  test_geometry_linestring.cpp  test_geometry_point.cpp  test_geometry_polygon.cpp  test_geometry_spline.cpp  test_index.cpp  test_layer.cpp  test_layer_table.cpp  test_output.cpp  test_point.cpp  test_property_map.cpp  test_property_value.cpp  test_scaling.cpp  test_tile.cpp  test_types.cpp  test_vector_tile.cpp
