#-----------------------------------------------------------------------------
#
#  CMake config
#
#  vtzero fuzz tests
#
#-----------------------------------------------------------------------------
#
#  These are intended to be used with AFL.
#
#-----------------------------------------------------------------------------

add_executable(ft_skip_structured_value skip_structured_value.cpp)

